fixing on safari

--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ html {
 
 .page {
   width: 100%;
-  max-width: 310px;
+  max-width: 510px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -42,8 +42,8 @@ html {
 }
 
 .item {
-  width: 150px;
-  height: 150px;
+  width: 250px;
+  height: 250px;
   cursor: pointer;
   margin-top: 10px;
 }
